--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,13 +15,13 @@ phases:
       - echo building and tagging started image on `date`
       - echo running mvn clean install...
       - mvn clean install
-      - echo building the Docker image...
+      - echo building the Dockerfile image...
       - docker build -t $REPOSITORY_URI:latest .
-      - echo tagging the Docker image...
+      - echo tagging the Dockerfile image...
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
   post_build:
     commands:
-      - echo pushing Docker image to Amazon ECR started on `date`
+      - echo pushing Dockerfile image to Amazon ECR started on `date`
       - echo pushing to repository...
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
